--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import url(../fontawesome-free-5.0.8/web-fonts-with-css/css/fontawesome-all.css);
 @import url(../css/bootstrap-theme.css);
 @import url(../css/bootstrap.min.css);
-@import url(../css/media.css);
 * {
   padding: 0;
   margin: 0;
@@ -58,31 +57,42 @@
     padding-top: 31px; }
   .bg_top .menu {
     padding-top: 32px; }
-    .bg_top .menu li {
-      display: inline-block;
-      font-size: 16px;
-      font-family: font-family, "Asap";
-      text-transform: uppercase;
-      margin-left: 40px; }
-      .bg_top .menu li a {
-        color: #4d4d4d; }
-        .bg_top .menu li a:after {
-          display: block;
-          content: "";
-          width: 0;
-          height: 2px;
-          margin-top: 9px;
-          background-color: #4d4d4d;
-          transition: 0.2s; }
-      .bg_top .menu li:hover a:after {
-        width: 100%; }
+    .bg_top .menu ul {
+      display: flex;
+      justify-content: flex-end; }
+      @media screen and (max-width: 414px) {
+        .bg_top .menu ul {
+          flex-direction: column; } }
+      .bg_top .menu ul li {
+        font-size: 16px;
+        font-family: font-family, "Asap";
+        text-transform: uppercase;
+        margin-left: 40px; }
+        .bg_top .menu ul li a {
+          color: #4d4d4d; }
+          .bg_top .menu ul li a:after {
+            display: block;
+            content: "";
+            width: 0;
+            height: 2px;
+            margin-top: 8px;
+            background-color: #4d4d4d;
+            transition: 0.2s; }
+        .bg_top .menu ul li:hover a:after {
+          width: 100%; }
   .bg_top .connection {
     padding-top: 177px; }
+    @media screen and (max-width: 768px) {
+      .bg_top .connection {
+        padding-top: 0; } }
     .bg_top .connection h1 {
       font-family: font-family, "Asap";
       font-weight: 500;
       font-size: 90px;
       color: #4d4d4d; }
+      @media screen and (max-width: 768px) {
+        .bg_top .connection h1 {
+          font-size: 70px; } }
     .bg_top .connection p {
       font-family: font-family, "Asap";
       font-weight: 500;
@@ -104,33 +114,124 @@
         background-color: white;
         border: none;
         box-shadow: -3px 17px 44px -5px rgba(5, 5, 5, 0.51);
-        transition: 0.2s; }
+        transition-delay: .1s; }
   .bg_top .man_photo img {
-    max-width: 100%; }
+    max-width: 100%;
+    margin: 15px 0; }
 
-.col-sm-9 {
-  text-align: center; }
-  .col-sm-9 li {
-    margin-left: 10px; }
-
-.col-md-12, .col-md-10, .col-md-8 {
+.information h2 {
+  font-family: font-family, "Asap";
+  font-weight: 700;
+  font-size: 46px;
+  color: #717171;
+  letter-spacing: 4px;
+  display: inline-block;
+  max-width: 312px;
+  padding-top: 201px; }
+  @media screen and (max-width: 768px) {
+    .information h2 {
+      padding-top: 20px; } }
+  .information h2:before {
+    content: "";
+    display: block;
+    height: 4px;
+    width: 60px;
+    background-color: #4d4d4d; }
+.information p {
+  font-family: font-family, "Asap";
+  font-size: 16px;
+  font-weight: 400;
+  color: #4d4d4d;
+  display: inline-block;
+  max-width: 465px; }
+.information a {
+  display: inline-block;
   text-align: center;
-  background-color: #ff253a;
-  border: solid 1px black; }
-
-.col-md-8, .col-md-10, .col-md-12 {
-  float: none;
-  margin: auto; }
+  min-width: 245px;
+  line-height: 50px;
+  border: solid 1px #4d4d4d;
+  font-size: 16px;
+  font-family: font-family, "Asap";
+  font-weight: 500;
+  color: #4d4d4d;
+  margin-top: 40px; }
+  @media screen and (max-width: 768px) {
+    .information a {
+      margin: 20px 0; } }
+.information img {
+  float: right;
+  width: 100%;
+  padding: 109px 0 126px 0; }
+  @media screen and (max-width: 768px) {
+    .information img {
+      padding: 20px 0; } }
 
 article {
-  background-color: gray; }
-
-.col-md-4 {
-  text-align: center;
-  background-color: #2b669a;
-  border: solid 1px black; }
-
-footer {
+  background-color: #f6f6f6;
   text-align: center; }
+
+.services {
+  padding: 117px 15px 30px 15px; }
+  .services h3 {
+    display: inline-block;
+    font-family: font-family, "Asap";
+    letter-spacing: 6px;
+    font-weight: 700;
+    font-size: 46px;
+    color: #717171;
+    padding-bottom: 71px; }
+    .services h3:before {
+      content: "";
+      display: block;
+      height: 4px;
+      width: 60px;
+      margin: auto;
+      background-color: #717171; }
+  .services .row {
+    padding-bottom: 87px; }
+    @media screen and (max-width: 414px) {
+      .services .row {
+        padding-bottom: 18px; } }
+    @media screen and (max-width: 414px) {
+      .services .row div {
+        padding-top: 28px; } }
+    .services .row:nth-child(2) .col-md-4:nth-child(2) {
+      padding-top: 15px; }
+    .services .row:nth-child(3) .col-md-4:nth-child(2) {
+      margin-top: -6px; }
+    .services .row h4 {
+      font-family: font-family, "Asap";
+      font-weight: 500;
+      font-size: 24px;
+      color: #4d4d4d;
+      max-width: 209px;
+      margin: auto;
+      padding-top: 20px;
+      line-height: 30px; }
+      @media screen and (max-width: 414px) {
+        .services .row h4 {
+          font-size: 20px;
+          max-width: 190px; } }
+
+.skills {
+  padding: 117px 15px 124px 15px;
+  text-align: center; }
+  .skills h3 {
+    display: inline-block;
+    font-family: font-family, "Asap";
+    letter-spacing: 6px;
+    font-weight: 700;
+    font-size: 46px;
+    color: #717171;
+    padding-bottom: 62px; }
+    .skills h3:before {
+      content: "";
+      display: block;
+      height: 4px;
+      width: 60px;
+      margin: auto;
+      background-color: #717171; }
+  .skills img {
+    width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
