--- a/css/style.scss
+++ b/css/style.scss
@@ -19,11 +19,41 @@
 @import "../fontawesome-free-5.0.8/web-fonts-with-css/css/fontawesome-all.css";
 @import "../css/bootstrap-theme.css";
 @import "../css/bootstrap.min.css";
-@import "../css/media.css";
 
 $font_1: font-family, 'Asap';
 $font_2: font-family, 'Montserrat Alternates';
 $font_3: font-family, 'Lato';
+
+@mixin h2 {
+  font-family: $font_1;
+  font-weight: 700;
+  font-size: 46px;
+  color: #717171;
+  letter-spacing: 4px;
+}
+
+@mixin h3 {
+  display: inline-block;
+  font-family: $font_1;
+  letter-spacing: 6px;
+  font-weight: 700;
+  font-size: 46px;
+  color: #717171;
+  &:before {
+    content: "";
+    display: block;
+    height: 4px;
+    width: 60px;
+    margin: auto;
+    background-color: #717171;
+  }
+}
+
+@mixin max-screen($res) {
+  @media screen and (max-width: $res) {
+    @content;
+  }
+}
 
 .bg_top {
   background-image: url("../images/bg_top.png");
@@ -37,47 +67,62 @@ $font_3: font-family, 'Lato';
   .menu {
     padding-top: 32px;
 
-    li {
-      display: inline-block;
-      font-size: 16px;
-      font-family: $font_1;
-      text-transform: uppercase;
-      margin-left: 40px;
-
-      a {
-        color: #4d4d4d;
-
-        &:after {
-          display: block;
-          content: "";
-          width: 0;
-          height: 2px;
-          margin-top: 9px;
-          background-color: #4d4d4d;
-          transition: 0.2s;
-        }
-
-        //&:hover{
-        //  text-transform: capitalize;
-        //}
+    ul {
+      display: flex;
+      justify-content: flex-end;
+      @include max-screen(414px) {
+        flex-direction: column;
       }
 
-      &:hover {
-        a:after {
-          width: 100%;
+      li {
+        font-size: 16px;
+        font-family: $font_1;
+        text-transform: uppercase;
+        margin-left: 40px;
+
+        a {
+          color: #4d4d4d;
+
+          &:after {
+            display: block;
+            content: "";
+            width: 0;
+            height: 2px;
+            margin-top: 8px;
+            background-color: #4d4d4d;
+            transition: 0.2s;
+          }
+
+          //&:hover{
+          //  text-transform: capitalize;
+          //}
+        }
+
+        &:hover {
+          a:after {
+            width: 100%;
+          }
         }
       }
     }
+
   }
+
 
   .connection {
     padding-top: 177px;
+    @include max-screen(768px) {
+      padding-top: 0;
+    }
 
     h1 {
       font-family: $font_1;
       font-weight: 500;
       font-size: 90px;
       color: #4d4d4d;
+      @include max-screen(768px) {
+        font-size: 70px;
+      }
     }
 
     p {
@@ -104,7 +149,7 @@ $font_3: font-family, 'Lato';
         background-color: white;
         border: none;
         box-shadow: -3px 17px 44px -5px rgba(5, 5, 5, 0.51);
-        transition: 0.2s;
+        transition-delay: .1s;
       }
     }
   }
@@ -112,36 +157,134 @@ $font_3: font-family, 'Lato';
   .man_photo {
     img {
       max-width: 100%;
+      margin: 15px 0;
     }
   }
 }
 
-.col-sm-9 {
-  text-align: center;
+.information {
+  h2 {
+    @include h2;
+    display: inline-block;
+    max-width: 312px;
+    padding-top: 201px;
+    @include max-screen(768px) {
+      padding-top: 20px;
+    }
 
-  li {
-    margin-left: 10px;
+    &:before {
+      content: "";
+      display: block;
+      height: 4px;
+      width: 60px;
+      background-color: #4d4d4d;
+    }
+  }
+
+  p {
+    font-family: $font_1;
+    font-size: 16px;
+    font-weight: 400;
+    color: #4d4d4d;
+    display: inline-block;
+    max-width: 465px;
+  }
+
+  a {
+    display: inline-block;
+    text-align: center;
+    min-width: 245px;
+    line-height: 50px;
+    border: solid 1px #4d4d4d;
+    font-size: 16px;
+    font-family: $font_1;
+    font-weight: 500;
+    color: #4d4d4d;
+    margin-top: 40px;
+    @include max-screen(768px) {
+      margin: 20px 0;
+    }
+  }
+
+  img {
+    float: right;
+    width: 100%;
+    padding: 109px 0 126px 0;
+    @include max-screen(768px) {
+      padding: 20px 0;
+    }
   }
 }
 
-.col-md-12, .col-md-10, .col-md-8 {
-  text-align: center;
-  background-color: #ff253a;
-  border: solid 1px black;
-}
-
-.col-md-8, .col-md-10, .col-md-12 {
-  float: none;
-  margin: auto;
-}
-
 article {
-  background-color: gray;
+  background-color: #f6f6f6;
+  text-align: center;
 }
 
-.col-md-4 {
-  text-align: center;
-  background-color: #2b669a;
-  border: solid 1px black;
+.services {
+  padding: 117px 15px 30px 15px;
+
+  h3 {
+    @include h3;
+    padding-bottom: 71px;
+  }
+
+  .row {
+    padding-bottom: 87px;
+    @include max-screen(414px) {
+      padding-bottom: 18px;
+    }
+
+    div {
+      @include max-screen(414px) {
+        padding-top: 28px;
+      }
+    }
+
+    &:nth-child(2) {
+      .col-md-4 {
+        &:nth-child(2) {
+          padding-top: 15px;
+        }
+      }
+    }
+
+    &:nth-child(3) {
+      .col-md-4 {
+        &:nth-child(2) {
+          margin-top: -6px;
+        }
+      }
+    }
+
+    h4 {
+      font-family: $font_1;
+      font-weight: 500;
+      font-size: 24px;
+      color: #4d4d4d;
+      max-width: 209px;
+      margin: auto;
+      padding-top: 20px;
+      line-height: 30px;
+      @include max-screen(414px) {
+        font-size: 20px;
+        max-width: 190px;
+      }
+    }
+  }
 }
+
+.skills{
+  padding: 117px 15px 124px 15px;
+  text-align: center;
+  h3{
+    @include h3;
+    padding-bottom: 62px;
+  }
+  img{
+    width: 100%;
+  }
+}
+
+
 
