--- a/css/fonts.scss
+++ b/css/fonts.scss
@@ -1,5 +1,17 @@
 @font-face {
   font-family: 'Asap';
+  src: url('../fonts/Asap-Italic.eot');
+  src: url('../fonts/Asap-Italic.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Asap-Italic.woff2') format('woff2'),
+  url('../fonts/Asap-Italic.woff') format('woff'),
+  url('../fonts/Asap-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+
+@font-face {
+  font-family: 'Asap';
   src: url('../fonts/Asap-Bold.eot');
   src: url('../fonts/Asap-Bold.eot?#iefix') format('embedded-opentype'),
   url('../fonts/Asap-Bold.woff2') format('woff2'),
