--- a/css/style.scss
+++ b/css/style.scss
@@ -32,6 +32,7 @@ $font_3: font-family, 'Lato';
   font-size: 46px;
   color: #717171;
   letter-spacing: 4px;
+
 }
 
 @mixin h3 {
@@ -49,6 +50,9 @@ $font_3: font-family, 'Lato';
     width: 60px;
     margin: auto;
     background-color: #717171;
+  }
+  @include max-screen(812px) {
+    font-size: 30px;
   }
 }
 
@@ -111,8 +115,12 @@ header {
 
   .connection {
     padding-top: 177px;
+    @include max-screen(1024px) {
+      padding-top: 50px;
+    }
     @include max-screen(768px) {
       padding-top: 0;
+      text-align: center;
     }
 
     h1 {
@@ -120,8 +128,13 @@ header {
       font-weight: 500;
       font-size: 90px;
       color: #4d4d4d;
-      @include max-screen(768px) {
-        font-size: 70px;
+      @include max-screen(1024px) {
+        font-size: 67px;
+        margin-bottom: 20px;
+      }
+      @include max-screen(750px) {
+        font-size: 55px;
+        margin: 20px 0 20px 0;
       }
     }
 
@@ -131,6 +144,10 @@ header {
       font-size: 22px;
       line-height: 38px;
       color: rgba(77, 77, 77, .53);
+      @include max-screen(414px) {
+        font-size: 19px;
+
+      }
     }
 
     a {
@@ -151,6 +168,11 @@ header {
         box-shadow: -3px 17px 44px -5px rgba(5, 5, 5, 0.51);
         transition-delay: .1s;
       }
+
+      @include max-screen(414px) {
+        margin: 20px 0;
+
+      }
     }
   }
 
@@ -158,19 +180,26 @@ header {
     img {
       max-width: 100%;
       margin: 15px 0;
+      @include max-screen(1024px) {
+        max-width: 90%;
+      }
+      @include max-screen(770px) {
+        display: none;
+      }
     }
   }
 }
 
 .information {
+  @include max-screen(768px) {
+    text-align: center;
+  }
+
   h2 {
     @include h2;
     display: inline-block;
     max-width: 312px;
     padding-top: 201px;
-    @include max-screen(768px) {
-      padding-top: 20px;
-    }
 
     &:before {
       content: "";
@@ -178,6 +207,12 @@ header {
       height: 4px;
       width: 60px;
       background-color: #4d4d4d;
+    }
+
+    @include max-screen(812px) {
+      padding-top: 20px;
+      font-size: 30px;
+      max-width: 214px;
     }
   }
 
@@ -201,7 +236,7 @@ header {
     font-weight: 500;
     color: #4d4d4d;
     margin-top: 40px;
-    @include max-screen(768px) {
+    @include max-screen(812px) {
       margin: 20px 0;
     }
   }
@@ -210,8 +245,12 @@ header {
     float: right;
     width: 100%;
     padding: 109px 0 126px 0;
+    @include max-screen(812px) {
+      padding: 34px 0 55px 0;
+    }
     @include max-screen(768px) {
-      padding: 20px 0;
+      max-width: 72%;
+      float: none;
     }
   }
 }
@@ -220,29 +259,29 @@ header {
 article {
   background-color: #f6f6f6;
   text-align: center;
-
 }
 
 
 .services {
   padding: 117px 15px 30px 15px;
+  @include max-screen(812px) {
+    padding: 30px 15px 0px 15px;
+  }
 
   h3 {
     @include h3;
     padding-bottom: 71px;
+    @include max-screen(812px) {
+      padding-bottom: 18px;
+    }
   }
 
   .row {
     padding-bottom: 87px;
-    @include max-screen(414px) {
+    @include max-screen(812px) {
       padding-bottom: 18px;
     }
 
-    div {
-      @include max-screen(414px) {
-        padding-top: 28px;
-      }
-    }
 
     &:nth-child(2) {
       .col-md-4 {
@@ -271,7 +310,6 @@ article {
       line-height: 30px;
       @include max-screen(414px) {
         font-size: 20px;
-        max-width: 190px;
       }
     }
   }
@@ -280,10 +318,16 @@ article {
 .skills {
   padding: 117px 15px 124px 15px;
   text-align: center;
+  @include max-screen(812px) {
+    padding: 50px 15px 60px 15px;
+  }
 
   h3 {
     @include h3;
     padding-bottom: 62px;
+    @include max-screen(812px) {
+      padding-bottom: 35px;
+    }
   }
 
   img {
@@ -293,6 +337,9 @@ article {
 
 .portfolio {
   padding: 126px 15px 123px 15px;
+  @include max-screen(1024px) {
+    padding: 55px 15px 65px 15px;
+  }
 
   h3 {
     @include h3;
@@ -305,9 +352,14 @@ article {
 
     img {
       width: 100%;
-
       &:hover {
         box-shadow: 0 0 28px 0 rgba(0, 0, 0, 0.75);
+      }
+      @include max-screen(750px){
+        max-width: 60%;
+      }
+      @include max-screen(414px){
+        max-width: 100%;
       }
     }
   }
@@ -336,21 +388,40 @@ article {
 .slick {
   padding-top: 126px;
   padding-bottom: 122px;
+  @include max-screen(812px) {
+    padding-top: 40px;
+    padding-bottom: 50px;
+  }
 
   h3 {
     @include h3;
     margin-bottom: 58px;
     @include max-screen(414px) {
       font-size: 30px;
+      margin-bottom: 25px;
     }
   }
 
   .slider {
     .row {
       padding: 80px 15px 0 15px;
-
+      @include max-screen(768px){
+        padding: 23px 15px 0 15px;
+      }
       img {
         width: 100%;
+      }
+    }
+
+    .slider-photo {
+      img {
+        @include max-screen(768px) {
+          width: 30%;
+          margin: auto;
+        }
+        @include max-screen(414px) {
+          width: 84%;
+        }
       }
     }
 
@@ -398,6 +469,10 @@ article {
       font-size: 30px;
       color: #373737;
       text-transform: uppercase;
+      @include max-screen(414px){
+        text-align: center;
+        padding-top: 10px;
+      }
     }
 
     h5 {
@@ -407,6 +482,10 @@ article {
       font-size: 12px;
       color: #212121;
       padding: 10px 0 22px 0;
+      @include max-screen(414px){
+        text-align: center;
+        padding-top: 10px;
+      }
     }
 
     p {
@@ -453,12 +532,17 @@ footer {
   background-repeat: no-repeat;
   padding: 148px 0 38px 0;
   margin-top: 155px;
+  @include max-screen(768px) {
+    padding: 48px 0 38px 0;
+  }
   @include max-screen(414px) {
     margin-top: 0;
   }
 
   .container {
     h3 {
+      display: block!important;
+      text-align: center;
       @include h3;
       color: #f0f0f0;
 
@@ -467,7 +551,7 @@ footer {
         background-color: #c1c1c1;
       }
 
-      margin-bottom: 71px;
+      padding-bottom: 71px;
     }
 
     form {
