--- a/css/style.css
+++ b/css/style.css
@@ -87,23 +87,35 @@ header .navbar-default {
   background-size: cover; }
   .bg_top .connection {
     padding-top: 177px; }
+    @media screen and (max-width: 1024px) {
+      .bg_top .connection {
+        padding-top: 50px; } }
     @media screen and (max-width: 768px) {
       .bg_top .connection {
-        padding-top: 0; } }
+        padding-top: 0;
+        text-align: center; } }
     .bg_top .connection h1 {
       font-family: font-family, "Asap";
       font-weight: 500;
       font-size: 90px;
       color: #4d4d4d; }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 1024px) {
         .bg_top .connection h1 {
-          font-size: 70px; } }
+          font-size: 67px;
+          margin-bottom: 20px; } }
+      @media screen and (max-width: 750px) {
+        .bg_top .connection h1 {
+          font-size: 55px;
+          margin: 20px 0 20px 0; } }
     .bg_top .connection p {
       font-family: font-family, "Asap";
       font-weight: 500;
       font-size: 22px;
       line-height: 38px;
       color: rgba(77, 77, 77, 0.53); }
+      @media screen and (max-width: 414px) {
+        .bg_top .connection p {
+          font-size: 19px; } }
     .bg_top .connection a {
       margin: 31px 20px 20px 0;
       display: inline-block;
@@ -120,10 +132,22 @@ header .navbar-default {
         border: none;
         box-shadow: -3px 17px 44px -5px rgba(5, 5, 5, 0.51);
         transition-delay: .1s; }
+      @media screen and (max-width: 414px) {
+        .bg_top .connection a {
+          margin: 20px 0; } }
   .bg_top .man_photo img {
     max-width: 100%;
     margin: 15px 0; }
+    @media screen and (max-width: 1024px) {
+      .bg_top .man_photo img {
+        max-width: 90%; } }
+    @media screen and (max-width: 770px) {
+      .bg_top .man_photo img {
+        display: none; } }
 
+@media screen and (max-width: 768px) {
+  .information {
+    text-align: center; } }
 .information h2 {
   font-family: font-family, "Asap";
   font-weight: 700;
@@ -133,15 +157,17 @@ header .navbar-default {
   display: inline-block;
   max-width: 312px;
   padding-top: 201px; }
-  @media screen and (max-width: 768px) {
-    .information h2 {
-      padding-top: 20px; } }
   .information h2:before {
     content: "";
     display: block;
     height: 4px;
     width: 60px;
     background-color: #4d4d4d; }
+  @media screen and (max-width: 812px) {
+    .information h2 {
+      padding-top: 20px;
+      font-size: 30px;
+      max-width: 214px; } }
 .information p {
   font-family: font-family, "Asap";
   font-size: 16px;
@@ -160,16 +186,20 @@ header .navbar-default {
   font-weight: 500;
   color: #4d4d4d;
   margin-top: 40px; }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 812px) {
     .information a {
       margin: 20px 0; } }
 .information img {
   float: right;
   width: 100%;
   padding: 109px 0 126px 0; }
+  @media screen and (max-width: 812px) {
+    .information img {
+      padding: 34px 0 55px 0; } }
   @media screen and (max-width: 768px) {
     .information img {
-      padding: 20px 0; } }
+      max-width: 72%;
+      float: none; } }
 
 article {
   background-color: #f6f6f6;
@@ -177,6 +207,9 @@ article {
 
 .services {
   padding: 117px 15px 30px 15px; }
+  @media screen and (max-width: 812px) {
+    .services {
+      padding: 30px 15px 0px 15px; } }
   .services h3 {
     display: inline-block;
     font-family: font-family, "Asap";
@@ -193,14 +226,17 @@ article {
       width: 60px;
       margin: auto;
       background-color: #717171; }
+    @media screen and (max-width: 812px) {
+      .services h3 {
+        font-size: 30px; } }
+    @media screen and (max-width: 812px) {
+      .services h3 {
+        padding-bottom: 18px; } }
   .services .row {
     padding-bottom: 87px; }
-    @media screen and (max-width: 414px) {
+    @media screen and (max-width: 812px) {
       .services .row {
         padding-bottom: 18px; } }
-    @media screen and (max-width: 414px) {
-      .services .row div {
-        padding-top: 28px; } }
     .services .row:nth-child(2) .col-md-4:nth-child(2) {
       padding-top: 15px; }
     .services .row:nth-child(3) .col-md-4:nth-child(2) {
@@ -216,12 +252,14 @@ article {
       line-height: 30px; }
       @media screen and (max-width: 414px) {
         .services .row h4 {
-          font-size: 20px;
-          max-width: 190px; } }
+          font-size: 20px; } }
 
 .skills {
   padding: 117px 15px 124px 15px;
   text-align: center; }
+  @media screen and (max-width: 812px) {
+    .skills {
+      padding: 50px 15px 60px 15px; } }
   .skills h3 {
     display: inline-block;
     font-family: font-family, "Asap";
@@ -238,11 +276,20 @@ article {
       width: 60px;
       margin: auto;
       background-color: #717171; }
+    @media screen and (max-width: 812px) {
+      .skills h3 {
+        font-size: 30px; } }
+    @media screen and (max-width: 812px) {
+      .skills h3 {
+        padding-bottom: 35px; } }
   .skills img {
     width: 100%; }
 
 .portfolio {
   padding: 126px 15px 123px 15px; }
+  @media screen and (max-width: 1024px) {
+    .portfolio {
+      padding: 55px 15px 65px 15px; } }
   .portfolio h3 {
     display: inline-block;
     font-family: font-family, "Asap";
@@ -259,12 +306,21 @@ article {
       width: 60px;
       margin: auto;
       background-color: #717171; }
+    @media screen and (max-width: 812px) {
+      .portfolio h3 {
+        font-size: 30px; } }
   .portfolio .item {
     margin-bottom: 30px; }
     .portfolio .item img {
       width: 100%; }
       .portfolio .item img:hover {
         box-shadow: 0 0 28px 0 rgba(0, 0, 0, 0.75); }
+      @media screen and (max-width: 750px) {
+        .portfolio .item img {
+          max-width: 60%; } }
+      @media screen and (max-width: 414px) {
+        .portfolio .item img {
+          max-width: 100%; } }
   .portfolio .portfolio-btn {
     display: inline-block;
     font-family: font-family, "Asap";
@@ -284,6 +340,10 @@ article {
 .slick {
   padding-top: 126px;
   padding-bottom: 122px; }
+  @media screen and (max-width: 812px) {
+    .slick {
+      padding-top: 40px;
+      padding-bottom: 50px; } }
   .slick h3 {
     display: inline-block;
     font-family: font-family, "Asap";
@@ -300,16 +360,30 @@ article {
       width: 60px;
       margin: auto;
       background-color: #717171; }
-    @media screen and (max-width: 414px) {
+    @media screen and (max-width: 812px) {
       .slick h3 {
         font-size: 30px; } }
+    @media screen and (max-width: 414px) {
+      .slick h3 {
+        font-size: 30px;
+        margin-bottom: 25px; } }
   .slick .slider {
     position: relative;
     border: solid 1px #212121; }
     .slick .slider .row {
       padding: 80px 15px 0 15px; }
+      @media screen and (max-width: 768px) {
+        .slick .slider .row {
+          padding: 23px 15px 0 15px; } }
       .slick .slider .row img {
         width: 100%; }
+    @media screen and (max-width: 768px) {
+      .slick .slider .slider-photo img {
+        width: 30%;
+        margin: auto; } }
+    @media screen and (max-width: 414px) {
+      .slick .slider .slider-photo img {
+        width: 84%; } }
     .slick .slider .slick-track {
       display: flex; }
     .slick .slider .slick-list {
@@ -336,6 +410,10 @@ article {
       font-size: 30px;
       color: #373737;
       text-transform: uppercase; }
+      @media screen and (max-width: 414px) {
+        .slick .slider h4 {
+          text-align: center;
+          padding-top: 10px; } }
     .slick .slider h5 {
       font-family: font-family, "Asap";
       font-style: italic;
@@ -343,6 +421,10 @@ article {
       font-size: 12px;
       color: #212121;
       padding: 10px 0 22px 0; }
+      @media screen and (max-width: 414px) {
+        .slick .slider h5 {
+          text-align: center;
+          padding-top: 10px; } }
     .slick .slider p {
       font-family: font-family, "Asap";
       font-size: 15px;
@@ -377,10 +459,15 @@ footer {
   padding: 148px 0 38px 0;
   margin-top: 155px;
   position: relative; }
+  @media screen and (max-width: 768px) {
+    footer {
+      padding: 48px 0 38px 0; } }
   @media screen and (max-width: 414px) {
     footer {
       margin-top: 0; } }
   footer .container h3 {
+    display: block !important;
+    text-align: center;
     display: inline-block;
     font-family: font-family, "Asap";
     letter-spacing: 6px;
@@ -389,7 +476,7 @@ footer {
     text-transform: uppercase;
     color: #717171;
     color: #f0f0f0;
-    margin-bottom: 71px; }
+    padding-bottom: 71px; }
     footer .container h3:before {
       content: "";
       display: block;
@@ -397,6 +484,9 @@ footer {
       width: 60px;
       margin: auto;
       background-color: #717171; }
+    @media screen and (max-width: 812px) {
+      footer .container h3 {
+        font-size: 30px; } }
     footer .container h3:before {
       content: "";
       background-color: #c1c1c1; }
